--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -14,7 +14,8 @@
   <div class="game-links"><a href="basic.html">Basic Javascript</a></div>
   <div><p> </p></div>
   <div><script src="p5playintro.js"></script></div>
-  <hi> I am </hi>
+  <hi> I am quite dumb</hi>
+  
 </body>
 
 </html> 
