--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -14,8 +14,8 @@
   <div class="game-links"><a href="basic.html">Basic Javascript</a></div>
   <div><p> </p></div>
   <div><script src="p5playintro.js"></script></div>
-  <hi> I am quite dumb</hi>
-  
+  <h1> I am quite dumb</h1>
+
 </body>
 
 </html> 
