--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -15,11 +15,11 @@
   <div><p> </p></div>
   <div><script src="p5playintro.js"></script></div>
   <h1> I am quite dumb</h1>
-  <hi> I am quite dumb</hi>
-  <hi> I am quite dumb</hi>
-  <hi> I am quite dumb</hi>
-  <hi> I am quite dumb</hi>
-  <hi> I am quite dumb</hi>
+  <hi> I am quite dumb</h1>
+  <hi> I am quite dumb</h1>
+  <hi> I am quite dumb</h1>
+  <hi> I am quite dumb</h1>
+  <hi> I am quite dumb</h1>
 
 </body>
 
