--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -14,7 +14,7 @@
   <div class="game-links"><a href="basic.html">Basic Javascript</a></div>
   <div><p> </p></div>
   <div><script src="p5playintro.js"></script></div>
-  <main></main>
+  <main>
   <h1> I am quite dumb</h1>
   <h1> I am quite dumb</h1>
   <h1> I am quite dumb</h1>
