--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -21,7 +21,7 @@
   <h4> I am quite dumb</h4>
   <h5> I am quite dumb</h5>
   <h6> I am quite dumb</h6>
-  
+  <p> i am also quite dumber tahn me</p>
 </main>
 </body>
 
