--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -17,7 +17,7 @@
   <main>
   <h1> I am quite dumb</h1>
   
-  <p this is a demonstration of basic html structure using headings and paragraphs.
+  <p></p>this is a demonstration of basic html structure using headings and paragraphs.
   
   <h2> I am quite dumb</h2>
 
