--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -15,7 +15,7 @@
   <div><p> </p></div>
   <div><script src="p5playintro.js"></script></div>
   <main>
-  <h1>wlecome to My Simple Page!</h1>
+  <h1>Welcome to My Simple Page!</h1>
   
   <p></p>this is a demonstration of basic html structure using headings and paragraphs.
   
