--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -17,7 +17,7 @@
   <main>
   <h1>Welcome to My Simple Page!</h1>
   
-  <p></p>this is a demonstration of basic html structure using headings and paragraphs.
+  <p>this is a demonstration of basic html structure using headings and paragraphs.</p>
   
   <h2> I am quite dumb</h2>
 
