--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -19,8 +19,8 @@
   
   <p>this is a demonstration of basic html structure using headings and paragraphs.</p>
   
-  <h2> I am quite dumb</h2>
-
+  <h2>this is a smaller h tag</h2>
+<p></p>
 
 </main>
 </body>
