--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -20,7 +20,7 @@
   <p>this is a demonstration of basic html structure using headings and paragraphs.</p>
   
   <h2>this is a smaller h tag</h2>
-<p></p>
+<p>This is another p tag</p>
 
 </main>
 </body>
