--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -14,8 +14,9 @@
   <div class="game-links"><a href="basic.html">Basic Javascript</a></div>
   <div><p> </p></div>
   <div><script src="p5playintro.js"></script></div>
-  
+
   <main>
+    <section
   <h1>Welcome to My Simple Page!</h1>
   
   <p>this is a demonstration of basic html structure using headings and paragraphs.</p>
