--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -16,14 +16,14 @@
   <div><script src="p5playintro.js"></script></div>
 
   <main>
-    <section
+    <section>
   <h1>Welcome to My Simple Page!</h1>
   
   <p>this is a demonstration of basic html structure using headings and paragraphs.</p>
   
   <h2>this is a smaller h tag</h2>
 <p>This is another p tag</p>
-
+</section>
 
 
 </main>
