--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -26,6 +26,10 @@
 </section>
 
 <p style="color:red;"> Red</p>
+<p style="color:blue;"> Red</p>
+<p style="color:red;"> Red</p>
+<p style="color:red;"> Red</p>
+<p style="color:red;"> Red</p>
 
 
 </main>
