--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -27,8 +27,8 @@
 
 <p style="color:red;"> Red</p>
 <p style="color:blue;"> Red</p>
-<p style="color:red;"> Red</p>
-<p style="color:red;"> Red</p>
+<p style="color:green;"> Red</p>
+<p style="color:or;"> Red</p>
 <p style="color:red;"> Red</p>
 
 
