--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -28,7 +28,7 @@
 <p style="color:red;"> Red</p>
 <p style="color:blue;"> Red</p>
 <p style="color:green;"> Red</p>
-<p style="color:or;"> Red</p>
+<p style="color:orange;"> Red</p>
 <p style="color:red;"> Red</p>
 
 
