--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -29,7 +29,7 @@
 <p style="color:blue;"> Red</p>
 <p style="color:green;"> Red</p>
 <p style="color:orange;"> Red</p>
-<p style="color:red;"> Red</p>
+<p style="color:purple;"> Red</p>
 
 
 </main>
