--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -26,8 +26,8 @@
 </section>
 
 <p style="color:red;"> Red</p>
-<p style="color:blue;"> Red</p>
-<p style="color:green;"> Red</p>
+<p style="color:blue;"> blue</p>
+<p style="color:green;"> green</p>
 <p style="color:orange;"> Red</p>
 <p style="color:purple;"> Red</p>
 
