--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -28,8 +28,8 @@
 <p style="color:red;"> Red</p>
 <p style="color:blue;"> blue</p>
 <p style="color:green;"> green</p>
-<p style="color:orange;"> Red</p>
-<p style="color:purple;"> Red</p>
+<p style="color:orange;"> orange</p>
+<p style="color:purple;"> purple</p>
 
 
 </main>
