--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -30,7 +30,7 @@
 <p style="color:green;"> green</p>
 <p style="color:orange;"> orange</p>
 <p style="color:purple;"> purple</p>
-<a></a>
+<a>Go to Google</a>
 
 
 </main>
