--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -31,6 +31,7 @@
 <p style="color:orange;"> orange</p>
 <p style="color:purple;"> purple</p>
 <a href="https://www.google.com/"target="_blank">Go to Google</a>
+<a href="https://www.google.com/"target="_self">Go to Google</a>
 
 
 </main>
