--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -13,7 +13,7 @@
   <div class="game-links"><a href="../index.html">Home</a></div>
   <div class="game-links"><a href="basic.html">Basic Javascript</a></div>
   <div><p> </p></div>
-  <div><script src="L01_redcirlce.js"></script></div>
+  <div><script src="p5playintro.js"></script></div>
 
   <main>
     <section>
