--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <a href="/fruitninja/">Play Fruit Ninja</a>
     <a href="/geometrydash/">Play Geometry Dash</a>
   </div>
-  <sc
+  <script src="mid-sem-revision.js">
+    
+  </script>
 </body>
 </html>
