--- a/p5play_intro/index.html
+++ b/p5play_intro/index.html
@@ -17,7 +17,7 @@
   <main>
 
 </main>
-  <div><script src="p5playintro.js"></script></div>
+  <div><script src="mid-sem-revision.js"></script></div>
 
 </body>
 
