--- a/flappybird/index.html
+++ b/flappybird/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <div class="game-links"><a href="../index.html">Home</a></div>
-  <div><p> </p></div>
-  <div><script src="playground/playground.js"></script></div>
+  <div><p> </p></div>s
+  <div><script src="/.j"></script></div>
    <!-- <div><script src="flappybird.js"></script></div> -->
   
   
