--- a/fruitninja/index.html
+++ b/fruitninja/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="game-links"><a href="../index.html">Home</a></div>
   <div><p> </p></div>
-  <div><script src="fruitninj02.ja-s"></script></div>
+  <div><script src="fruitninja/subteachercode.js"></script></div>
   
 </body>
 </html> 
